# TucanLightmapper

./: CMakeLists.txt  Camera.h  Display.cpp  Display.h  Mesh.h  README.md  Scene.cpp  Scene.h  Shader.h  Texture.h  Triangle.h  TucanGL.h  Vertex.h  main.cpp
